# prismatic

./: .gitignore  README.md  data.py  eigenlearning.py  pyproject.toml  utils.py
flab/: empirics.py
flab/core/: devices.py  empirics.py  imagedata.py  krr.py
flab/prismatic/: data.py  feature_decomp.py  models.py  utils.py
